# hubstry-harmonic-stage

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.sh
docs/: API.md  ARCHITECTURE.md  DMX_MIGRATION.md
examples/: demo_cue_engine.py  demo_fixture_control.py  demo_harmonic_grid.py
src/: __init__.py  cli.py
src/core/: __init__.py  channel_mapper.py  harmonic_grid.py  rational_set.py
src/protocol/: __init__.py  packet.py  transport.py
src/security/: __init__.py  auth_lightweight.py  hsl_stage.py
src/stage/: __init__.py  cue_engine.py  dmx_bridge.py  fixture_controller.py  scene_parser.py
tests/: test_channel_mapper.py  test_harmonic_grid.py  test_protocol.py  test_rational_set.py  test_security.py
