[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubstry-harmonic-stage"
version = "0.1.0"
description = "Protocolo Harmônico para Indústria Criativa e Tecnologia de Palco"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Guilherme Gonçalves Machado", email = "guilhermemachado.ceo@hubstry.dev" },
]
keywords = ["harmonic-protocol", "stage-lighting", "dmx", "hstage", "hubstry", "creative-technology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Networking",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
hstage = "src.cli:main"

[project.urls]
Homepage = "https://hubstry.dev"
Documentation = "https://hubstry.dev/docs/hstage"
Repository = "https://github.com/Hubstry-DeepTech/hubstry-harmonic-stage"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
